tdf#163720 sw smart justify: fix hyphenated single portion lines

Hyphen length wasn't calculated in single portion lines at shrinking,
because the width of the overhanging line without the hyphen overwrote
the calculated correct line width. This resulted less shrinking, than
needed, also lost hyphen in the PDF export.

Regression from commit 22eac3145ca62d15b47d95f4df60ce38d4f5aa46
"tdf#162220 sw smart justify: fix shrinking for single portion lines".

Follow-up to commit 17eaebee279772b6062ae3448012133897fc71bb
"tdf#119908 sw smart justify: fix justification by shrinking".

Change-Id: I512e7f1f86f80ff6ea3d0b6a0b0db8255f5d0a60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176207
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 42533c94ec1a52c49b2587e53ab55e67fc4a449a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176223
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 42d76a89f2730626446cc3bc85cbbaab49bbcb9d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176229
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>